fix: field width on mobile

--- a/src/app/features/room/join-form/join-form.component.scss
+++ b/src/app/features/room/join-form/join-form.component.scss
@@ -8,7 +8,8 @@
 }
 
 .form {
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   padding: 32px 16px;
 }
 
